RestController works and refactor register message for existing email and username